--- a/gaming.html
+++ b/gaming.html
@@ -933,62 +933,6 @@ p { margin: 0; }
 
 <br><br><br><br>
 
-<sub><sub><img width="28px" height="auto" src="https://i.imgur.com/nX9OFvm.gif"></sub></sub>
-<font color="#a37a7a">　<b>adorable home</b>　<font style="font-size:9px">♡</font></font><br><br>
-　　　<sub><sub><img src="https://i.imgur.com/v3VaYjZ.gif"></sub></sub>　
-<a id="linkbjinho" style="text-decoration:none; color:#af8c8c;" data-target="spoiler1021" class="btn-spoiler1021">my home</a>
-
-
-<center>
-
-<div id="spoiler1021" class="spoiler-area is-closed1021">
-<!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-<br>
-<img width="350px" height="auto" src="https://i.imgur.com/OKfeLKI.jpg"/><br><br>
-<img width="350px" height="auto" src="https://i.imgur.com/Gfj0Mfo.jpg"/><br><br>
-<img width="350px" height="auto" src="https://i.imgur.com/FmMygJa.jpg"/>
-
-<br><br>
-</div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-<style>
-p { margin: 0; }
-.spoiler-area1021 {
-
-}
-.spoiler-area.is-closed1021 { height: 0; overflow: hidden; padding: 10px 0 0; }
-</style>
-<script>
-(function(){
-    "use strict";
-    var $btns = document.querySelectorAll('.btn-spoiler1021');
-    function loop($els, cb) {
-        var i = $els.length;
-        while(i--) {
-            cb($els[i]);
-        }
-    }
-    loop($btns, function($btn){
-        $btn.addEventListener("click", function(){
-            var $spoiler = document.getElementById(this.getAttribute("data-target"));
-            if( this.innerHTML === "my home" ){
-                this.innerHTML = "my home ˣ";
-                $spoiler.classList.remove("is-closed1021");
-            } else {
-                this.innerHTML = "my home";
-                $spoiler.classList.add("is-closed1021");
-            }
-        });
-
-    });
-
-}());
-</script>
-
-
-</center>
-
-<br><br><br>
-
 
 <sub><sub><img width="28px" height="auto" src="https://i.imgur.com/nX9OFvm.gif"></sub></sub>
 <font color="#a37a7a">　<b>カスタムキャスト</b>　<font style="font-size:9px">♡</font></font><br><br>
@@ -1255,9 +1199,14 @@ p { margin: 0; }
 <br>
 <br><br>
 <div style="padding-left:20px">
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.cookapps.homecooking&hl=pt_BR" target="_blank">miya's everyday joy of cooking</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=jp.co.imagineer.rilakkuma.farm&hl=pt_BR" target="_blank">rilakkuma farm</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.healingjjam.cathouse&hl=pt_BR" target="_blank">a cat house</a><br><br>
+<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.hyperbeard.kiki" target="_blank">kiki's vacation</a><br><br>
+<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.weplaydots.twodotsandroid" target="_blank">two dots</a><br><br>
+<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.hyperbeard.tsuki" target="_blank">tsuki adventure</a><br><br>
+<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.hyperbeard.adorablehome" target="_blank">adorable home</a><br><br>
+<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.zutgames.ilovehue2" target="_blank">i love hue too</a><br><br>
+<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.cookapps.homecooking" target="_blank">miya's everyday joy of cooking</a><br><br>
+<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=jp.co.imagineer.rilakkuma.farm" target="_blank">rilakkuma farm</a><br><br>
+<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.healingjjam.cathouse" target="_blank">a cat house</a><br><br>
 <a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=okinawa.harapeco.catRestaurant" target="_blank">purrfect spirits</a><br><br>
 <a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.blueskygames.clicker" target="_blank">lutie rpg</a><br><br>
 <a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.AngelaHe.TheresThisGirl" target="_blank">there's this girl</a><br><br>
