--- a/blog.html
+++ b/blog.html
@@ -354,7 +354,7 @@ i was thinking about my flash games, since all swf files will stop working on br
 flash can be played at pc on specific softwares, that work on pretty much any computer. i wanted to convert my flash games into html, but i honestly think keeping my games as swf will be a motivation for people trying to find other flash games and animations !
 i know just a few people will actually download my games and the software for playing them, but i will be happy if i can inspire even 1 person to play those games that made my childhood so happy <sub><sub><img src="https://i.imgur.com/og4DZFE.gif"/></sub></sub>
 there are an infinity of games that are incredibly fun and cute, that will be forever flash games and will be forgotten if people just pretend flash didn't exist.. i feel that it's my responsibility as a game designer to not adapt swf into html, in respect to the artists that inspired me in first place.
-so i made my old games downloadable, and make new games with html from now on <font color="#d3a5a5" style="font-size:11px;">♡</font>
+so i made my old games downloadable, and will make new games with html from now on <font color="#d3a5a5" style="font-size:11px;">♡</font>
 i fixed some issues with some very old ones and remade the visuals of my drawing tool :</pre><br>
 <br>
 <center><img width="360px" height="auto" src="https://i.imgur.com/MvjM0Rx.png"/></center>
