--- a/fashion.html
+++ b/fashion.html
@@ -461,7 +461,7 @@ p { margin: 0; }
 <font color="#bca6a0"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub>　( these pictures are temporary )　<sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
 <br><br>
 
-<img width="300px" height="auto" src="https://i.imgur.com/IgyBaUM.png"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/2y7cEiK.png"/><br><br>
 <br>
 
 <br><br><br>
@@ -481,12 +481,6 @@ p { margin: 0; }
 <br><br><br>
 <img width="300px" height="auto" src="https://i.imgur.com/TnJlqCH.jpg"/><br><br>
 <br>
-
-
-<br><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/MybQB3E.jpg"/><br><br>
-<br>
-
 
 <br><br><br>
 <img width="300px" height="auto" src="https://i.imgur.com/kyvwsom.png"/><br><br>
