--- a/fashion.html
+++ b/fashion.html
@@ -306,18 +306,18 @@ z-index: 3;
 
 <div id="stuff">
 
-<div style="background-image:url(https://i.imgur.com/DTETzQG.gif); background-attachment: fixed; width: 594px; height: 433px; color: #BC9F9F; overflow-x: hidden; text-align:justify ; font-family: Verdana; font-size:8px; line-height: 100%">
+<div style="background-image:url(https://i.imgur.com/tplfnY7.png); background-attachment: fixed; width: 594px; height: 433px; color: #BC9F9F; overflow-x: hidden; text-align:justify ; font-family: Verdana; font-size:8px; line-height: 100%">
 
-<div style="width: 650px;height: 30px;overflow-x: hidden; overflow-y: hidden;"><img src="https://i.imgur.com/CLXqkLw.png"><img src="https://i.imgur.com/CLXqkLw.png"><img src="https://i.imgur.com/CLXqkLw.png"></div>
+<div style="width: 1000px;height: 30px;overflow-x: hidden; overflow-y: hidden;"><img width="auto" height="25px" src="https://i.imgur.com/Bv01fJj.png"><img width="auto" height="25px" src="https://i.imgur.com/Bv01fJj.png"></div>
 <div style= "padding-left: 25%; padding-right: 25%;">
 
 <br><br>
-<center><img width="100px" height="auto" src="https://i.imgur.com/VOYlVgi.png"></center>
-<br><center><sub><sub><img src="https://i.imgur.com/QENr5rP.gif"></sub></sub><font color="#C1B1A9">　this is my space for cute outfits & pictures　</font> <sub><sub><img src="https://i.imgur.com/QENr5rP.gif"></sub></sub>
-<br><br><br><br><br><br>
-
-<img src="https://i.imgur.com/WizIVxr.gif">
+<center><img width="100px" height="auto" src="https://i.imgur.com/DT89Pu8.png"></center>
+<br><center><font color="#C1B1A9">the place where i share my passion for frills & lace</font>
 <br><br><br><br><br>
+
+<img width="auto" height="8px" src="https://i.imgur.com/VbWCgB4.png">
+<br><br><br><br>
 
 <style>
 p { margin: 0; }
@@ -329,13 +329,13 @@ p { margin: 0; }
 </head>
 <body>
 
-<div style="font-family: Verdana; font-size:8px;"><font color="#a88d8d"><sub><sub><img src="https://i.imgur.com/Zh7pcB3.gif"/></sub></sub>　<a data-target="spoilerb1" class="btn-spoiler2">+ look ideas</a></font></div>
+<div style="font-family: Verdana; font-size:8px;"><font color="#a88d8d"><sub><sub><sub><sub><img width="27px" height="auto" src="https://i.imgur.com/vyiriHe.png"/></sub></sub></sub></sub>　<a data-target="spoilerb1" class="btn-spoiler2">+ outfits</a></font></div>
 <div id="spoilerb1" class="spoiler-area2 is-closed2">
 <!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 
 <div style="font-family: Verdana; font-size:8px;"><font color="#B49797">
-<br><br><br>
-<sub><img width="12px" height="auto" src="https://i.imgur.com/tJrZd34.gif"></sub>　<a href="https://photos.app.goo.gl/otCymAX8NN6E6YTm6"target="_blank"><font color="#a59990" style="font-size:6px;">archive</font></a>　<sub><img width="12px" height="auto" src="https://i.imgur.com/tJrZd34.gif"></sub>
+<br><br>
+( <a href="https://photos.app.goo.gl/otCymAX8NN6E6YTm6"target="_blank"><font color="#bca6a0">archive</font></a> )
 <br>
 
 
@@ -343,58 +343,58 @@ p { margin: 0; }
 <center>
 
 <br><br>
-<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 04.01.20 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
+<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub> 04.20.20 <sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub></font><br><br>
+<img width="280px" height="auto" src="https://i.imgur.com/AlIxJOV.png"/><br>
+<br>
+
+
+<br><br><br>
+<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub> 04.01.20 <sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub></font><br><br>
 <img width="280px" height="auto" src="https://i.imgur.com/HDPtXJm.png"/><br>
 <br>
 
-<br><br>
-<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 02.13.20 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
+<br><br><br>
+<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub> 02.13.20 <sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub></font><br><br>
 <img width="280px" height="auto" src="https://i.imgur.com/Kb7ScMx.png"/><br>
 <br>
 
-<br><br>
-<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 01.16.20 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
+<br><br><br>
+<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub> 01.16.20 <sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub></font><br><br>
 <img width="280px" height="auto" src="https://i.imgur.com/1Pqc51k.png"/><br>
 <br>
 
 <br><br><br>
-<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 12.10.19 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
+<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub> 12.10.19 <sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub></font><br><br>
 <img width="280px" height="auto" src="https://i.imgur.com/egwFwwo.png"/><br>
 <br>
 
 <br><br><br>
-<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 11.08.19 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
+<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub> 11.08.19 <sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub></font><br><br>
 <img width="280px" height="auto" src="https://i.imgur.com/kMqhFzv.png"/><br>
 <br>
 
 
 <br><br><br>
-<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 10.24.19 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
+<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub> 10.24.19 <sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub></font><br><br>
 <img width="280px" height="auto" src="https://i.imgur.com/MdMNapR.png"/><br>
 <br>
 
 <br><br><br>
-<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 09.26.19 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
+<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub> 09.26.19 <sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub></font><br><br>
 <img width="280px" height="auto" src="https://i.imgur.com/wTPiJOy.png"/><br>
 <br>
 
 
 <br><br><br>
-<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 08.01.19 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
+<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub> 08.01.19 <sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub></font><br><br>
 <img width="280px" height="auto" src="https://i.imgur.com/j1ewq2s.png"/><br>
 <br>
 
 
 <br><br><br>
-<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 05.09.19 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
+<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub> 05.09.19 <sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub></font><br><br>
 <img width="280px" height="auto" src="https://i.imgur.com/iM3EPm2.png"/><br>
 <br>
-
-<br><br><br>
-<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 04.13.19 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
-<img width="280px" height="auto" src="https://i.imgur.com/d1SFjPO.png"/><br>
-<br>
-
 
 
 
@@ -423,11 +423,11 @@ p { margin: 0; }
     loop($btnsb, function($btnb){
         $btnb.addEventListener("click", function(){
             var $spoilerb = document.getElementById(this.getAttribute("data-target"));
-            if( this.innerHTML === "+ look ideas" ){
-                this.innerHTML = "- look ideas";
+            if( this.innerHTML === "+ outfits" ){
+                this.innerHTML = "- outfits";
                 $spoilerb.classList.remove("is-closed2");
             } else {
-                this.innerHTML = "+ look ideas";
+                this.innerHTML = "+ outfits";
                 $spoilerb.classList.add("is-closed2");
             }
         });
@@ -452,13 +452,13 @@ p { margin: 0; }
 </style>
 </head>
 <body>
-<div style="font-family: Verdana; font-size:8px;"><font color="#a88d8d"><sub><sub><img src="https://i.imgur.com/UYUfR9R.gif"/></sub></sub>　<a data-target="spoilerd1" class="btn-spoiler4">+ myself</a></font></div>
+<div style="font-family: Verdana; font-size:8px;"><font color="#a88d8d"><sub><sub><sub><sub><img width="25px" height="auto" src="https://i.imgur.com/9TM1str.png"/></sub></sub></sub></sub>　<a data-target="spoilerd1" class="btn-spoiler4">+ pictures</a></font></div>
 <div id="spoilerd1" class="spoiler-area4 is-closed4">
 <!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 
 <br><br>
 
-<font color="#bca6a0"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub>　( these pictures are temporary )　<sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
+<font color="#bca6a0">( those photos are timeless )</font><br><br>
 <br><br>
 
 <img width="300px" height="auto" src="https://i.imgur.com/2y7cEiK.png"/><br><br>
@@ -469,36 +469,24 @@ p { margin: 0; }
 <br>
 
 <br><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/uClcEMW.png"/><br><br>
+<br>
+
+<br><br><br>
 <img width="300px" height="auto" src="https://i.imgur.com/YoUTC3o.jpg"/><br><br>
 <br>
 
-
 <br><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/xZsmRuR.png"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/nHi6miq.png"/><br><br>
 <br>
 
 
 <br><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/TnJlqCH.jpg"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/TzCGuff.png"/><br><br>
 <br>
 
 <br><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/kyvwsom.png"/><br><br>
-<br>
-
-
-<br><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/v8yMYOk.png"/><br><br>
-<br>
-
-
-<br><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/n3m3CtB.jpg"/><br><br>
-<br>
-
-
-<br><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/FP8B0Gh.png"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/DlOtIv2.png"/><br><br>
 <br>
 
 
@@ -522,11 +510,11 @@ p { margin: 0; }
     loop($btnsd, function($btnd){
         $btnd.addEventListener("click", function(){
             var $spoilerd = document.getElementById(this.getAttribute("data-target"));
-            if( this.innerHTML === "+ myself" ){
-                this.innerHTML = "- myself";
+            if( this.innerHTML === "+ pictures" ){
+                this.innerHTML = "- pictures";
                 $spoilerd.classList.remove("is-closed4");
             } else {
-                this.innerHTML = "+ myself";
+                this.innerHTML = "+ pictures";
                 $spoilerd.classList.add("is-closed4");
             }
         });
@@ -536,13 +524,13 @@ p { margin: 0; }
 }());
 </script>
 
-<br><br><br>
-<center><img src="https://i.imgur.com/WizIVxr.gif"></center>
+<br><br>
+<center><img width="auto" height="8px" src="https://i.imgur.com/VbWCgB4.png"></center>
 <br><br><br>
 </center>
 <br><br>
-<br>
-<div style="width: 650px;height: 30px;overflow-x: hidden; overflow-y: hidden;"><img src="https://i.imgur.com/CLXqkLw.png"><img src="https://i.imgur.com/CLXqkLw.png"><img src="https://i.imgur.com/CLXqkLw.png"></div>
+<br><br>
+<div style="width: 1000px;height: 30px;overflow-x: hidden; overflow-y: hidden;"><img width="auto" height="25px" src="https://i.imgur.com/X2FOtiR.png"><img width="auto" height="25px" src="https://i.imgur.com/X2FOtiR.png"></div>
 
 </div>
 
