--- a/fashion.html
+++ b/fashion.html
@@ -316,7 +316,7 @@ z-index: 3;
 <br><center><font color="#C1B1A9">the place where i share my passion for frills & lace</font>
 <br><br><br><br><br>
 
-<img width="auto" height="8px" src="https://i.imgur.com/VbWCgB4.png">
+<img width="auto" height="8px" src="https://i.imgur.com/uJlLZpB.png">
 <br><br><br><br>
 
 <style>
@@ -525,7 +525,7 @@ p { margin: 0; }
 </script>
 
 <br><br>
-<center><img width="auto" height="8px" src="https://i.imgur.com/VbWCgB4.png"></center>
+<center><img width="auto" height="8px" src="https://i.imgur.com/uJlLZpB.png"></center>
 <br><br><br>
 </center>
 <br><br>
