--- a/fashion.html
+++ b/fashion.html
@@ -473,6 +473,10 @@ p { margin: 0; }
 <br>
 
 <br><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/fnFGpCj.png"/><br><br>
+<br>
+
+<br><br><br>
 <img width="300px" height="auto" src="https://i.imgur.com/YoUTC3o.jpg"/><br><br>
 <br>
 
