--- a/fashion.html
+++ b/fashion.html
@@ -493,6 +493,10 @@ p { margin: 0; }
 <img width="300px" height="auto" src="https://i.imgur.com/DlOtIv2.png"/><br><br>
 <br>
 
+<br><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/8DDOBIY.png"/><br><br>
+<br>
+
 
 <br><br>
 
