--- a/blog.html
+++ b/blog.html
@@ -338,7 +338,7 @@ take a look at <a id="linkbjinho" href="https://1997.pooftie.me" target="_blank"
 
 <center><img width="410px" height="auto" src="https://i.imgur.com/8coUy8X.gif"/></center>
 <br><br>
-<center><sub><sub><img src="https://i.imgur.com/RUdU6ZM.gif"/></sub></sub>　<a href="https://files.catbox.moe/6eac2s.mp3" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">8AM .mp3</font></a>　
+<center><sub><sub><img src="https://i.imgur.com/RUdU6ZM.gif"/></sub></sub>　<a href="https://file.pooftie.me/a/8AM.mp3" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">8AM .mp3</font></a>　
 </center><br>
 
 </font></font></font>
@@ -486,7 +486,7 @@ it had frequent visits ( from same ip ) so i suppose some people actually use th
 
 <center><img width="430px" height="auto" src="https://i.imgur.com/C0TNv4X.png"/></center>
 <br><br>
-<center><sub><sub><img src="https://i.imgur.com/NmtLB9T.gif"/></sub></sub>　<a href="https://files.catbox.moe/he42qt.rar" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">test html .rar</font></a>　</center>
+<center><sub><sub><img src="https://i.imgur.com/NmtLB9T.gif"/></sub></sub>　<a href="https://file.pooftie.me/r/test%20html.rar" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">test html .rar</font></a>　</center>
 <br>
 
 </font></font></font>
