--- a/credits.html
+++ b/credits.html
@@ -345,17 +345,16 @@ it is difficult to be completely transparent about how much content is edited or
 <font family = "Verdana"><font color="#ddb5b5"><font style="font-size:10px">　<sub><img height="16px" width="auto" src="https://i.imgur.com/yaDrGAm.png"></sub>&nbsp;&nbsp;hosting sites that i currently use :</font></font></font><br><br>
 <font family = "Verdana"><font color="#AD9F97"><font style="font-size:9px">
 　　html : github<br>
-　　image : imgur / catbox.moe / google photos<br>
-　　audio : catbox.moe<br>
-　　video : catbox.moe<br>
-　　rar : catbox.moe<br>
-　　swf : catbox.moe<br>
-　　txt : catbox.moe<br>
+　　image : imgur / file.pooftie.me<br>
+　　audio : file.pooftie.me<br>
+　　video : file.pooftie.me<br>
+　　rar : file.pooftie.me<br>
 <br>
 </font></font></font>
 <font family = "Verdana"><font color="#ccb6b6"><font size="1">
 ※ i will update this list whenever i change a hosting.<br>
-※ these sites are safe and all of them use https. privacy policy and use of cookies should be checked on the related websites.</font></font></font><br><br><br><br>
+※ these sites are safe and encrypted.<br>
+※ i try to keep my files within my own domains, but otherwise, privacy policy should be checked on the related websites.</font></font></font><br><br><br><br>
 <br>
 <font family = "Verdana"><font color="#ddb5b5"><font size="1">
 　<sub><img height="16px" width="auto" src="https://i.imgur.com/yaDrGAm.png"></sub>&nbsp;&nbsp;important safety tips :<br><br></font>
