--- a/fashion.html
+++ b/fashion.html
@@ -335,7 +335,7 @@ p { margin: 0; }
 
 <div style="font-family: Verdana; font-size:8px;"><font color="#B49797">
 <br><br>
-( <a href="https://photos.app.goo.gl/otCymAX8NN6E6YTm6"target="_blank"><font color="#bca6a0">archive</font></a> )
+( <a href="https://file.pooftie.me/f"target="_blank"><font color="#bca6a0">archive</font></a> )
 <br>
 
 
