--- a/gaming.html
+++ b/gaming.html
@@ -312,7 +312,7 @@ z-index: 3;
 </div>
 
 <audio id="musict" preload="true">
-  <source src="https://files.catbox.moe/xz93w3.mp3" type="audio/mpeg">
+  <source src="https://file.pooftie.me/a/73.mp3" type="audio/mpeg">
 </audio>
 <div id="audioplayer">
  <button id="pButton" class="play"></button>
@@ -434,10 +434,10 @@ function getPosition(el) {
 <br>
 <br>
 
-<font family = "Verdana"><font color="#af8c8c"><font size="1">
+<font family = "Verdana" style="font-size:8px;"><font color="#af8c8c">
 <center>here you can check the main games i've played or still play.. <br>
 please recommend me cute games !!</center>
-</font></font></font>
+</font></font>
 </center>
 <br><br>
 
@@ -501,13 +501,13 @@ p { margin: 0; }
 
 <br>
 　　　<sub><sub><img src="https://i.imgur.com/h01NXXS.gif"></sub></sub>　
-<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/gog4pQiboYYQTjCW8" target="_blank">
+<a id="linkbjinho" style="text-decoration:none;" href="https://file.pooftie.me/ro1" target="_blank">
 <font color="#af8c8c">my regular pets</font></a><font color="#d6bebe"> | </font>
-<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/AZdiLUAmimLCMqJDA" target="_blank">
+<a id="linkbjinho" style="text-decoration:none;" href="https://file.pooftie.me/ro2" target="_blank">
 <font color="#af8c8c">my hocus pocus pets</font></a><font color="#d6bebe"> | </font>
-<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/SVpWWRLDQvfuhhmf7" target="_blank">
+<a id="linkbjinho" style="text-decoration:none;" href="https://file.pooftie.me/ro3" target="_blank">
 <font color="#af8c8c">my homunculus</font></a><font color="#d6bebe"> | </font>
-<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/erzCQrv7ZaKeC9LW9" target="_blank">
+<a id="linkbjinho" style="text-decoration:none;" href="https://file.pooftie.me/ro4" target="_blank">
 <font color="#af8c8c">my elemental spirits</font></a>
 
 <br><br><br><br>
@@ -566,7 +566,7 @@ p { margin: 0; }
 
 <br>
 　　　<sub><sub><img src="https://i.imgur.com/h01NXXS.gif"></sub></sub>　
-<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/yDq5FNC2jphwEtwY8" target="_blank">
+<a id="linkbjinho" style="text-decoration:none;" href="https://file.pooftie.me/cc" target="_blank">
 <font color="#af8c8c">more images</font></a>
 
 <br><br><br><br>
@@ -583,7 +583,7 @@ p { margin: 0; }
 <div id="spoiler3" class="spoiler-area is-closed3">
 <!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 <br>
-<img src="https://i.imgur.com/RF4AinA.png"/>
+<img width="300px" height="auto" src="https://i.imgur.com/5hDrPWp.jpg"/>
 <br><br>
 </div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 <style>
@@ -625,7 +625,7 @@ p { margin: 0; }
 
 <br>
 　　　<sub><sub><img src="https://i.imgur.com/h01NXXS.gif"></sub></sub>　
-<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/kzP7QwkmfLq9cXRL7" target="_blank">
+<a id="linkbjinho" style="text-decoration:none;" href="https://file.pooftie.me/pp" target="_blank">
 <font color="#af8c8c">more images</font></a>
 
 <br><br><br><br>
@@ -688,77 +688,11 @@ p { margin: 0; }
 
 <br><br><br>
 
-<sub><sub><img width="28px" height="auto" src="https://i.imgur.com/nX9OFvm.gif"></sub></sub>
-<font color="#a37a7a">　<b>love live</b>　<font style="font-size:9px">♡</font></font><br><br>
-　　　<sub><sub><img src="https://i.imgur.com/h01NXXS.gif"></sub></sub>　
-<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/4AttnWZ6Vq5EJ3dm9" target="_blank">
-<font color="#af8c8c">my fav ur</font></a>
-
-<br><br><br><br>
-
-
-<sub><sub><img width="28px" height="auto" src="https://i.imgur.com/nX9OFvm.gif"></sub></sub>
-<font color="#a37a7a">　<b>tomotoru</b>　<font style="font-size:9px">♡</font></font><br><br>
-　　　<sub><sub><img src="https://i.imgur.com/v3VaYjZ.gif"></sub></sub>　
-<a id="linkbjinho" style="text-decoration:none; color:#af8c8c;" data-target="spoiler4" class="btn-spoiler4">mymelo's room</a>
-
-
-<center>
-
-<div id="spoiler4" class="spoiler-area is-closed4">
-<!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-<br>
-<img width="350px" height="auto" src="https://i.imgur.com/O14Ujt2.png"/>
-<br><br>
-</div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-<style>
-p { margin: 0; }
-.spoiler-area4 {
-
-}
-.spoiler-area.is-closed4 { height: 0; overflow: hidden; padding: 10px 0 0; }
-</style>
-<script>
-(function(){
-    "use strict";
-    var $btns = document.querySelectorAll('.btn-spoiler4');
-    function loop($els, cb) {
-        var i = $els.length;
-        while(i--) {
-            cb($els[i]);
-        }
-    }
-    loop($btns, function($btn){
-        $btn.addEventListener("click", function(){
-            var $spoiler = document.getElementById(this.getAttribute("data-target"));
-            if( this.innerHTML === "mymelo's room" ){
-                this.innerHTML = "mymelo's room ˣ";
-                $spoiler.classList.remove("is-closed4");
-            } else {
-                this.innerHTML = "mymelo's room";
-                $spoiler.classList.add("is-closed4");
-            }
-        });
-
-    });
-
-}());
-</script>
-
-
-</center>
-
-<br>
-　　　<sub><sub><img src="https://i.imgur.com/h01NXXS.gif"></sub></sub>　
-<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/VBLPuPdBfTRWDKJUA" target="_blank">
-<font color="#af8c8c">more images</font></a>
-
-<br><br><br><br>
 
 <sub><sub><img width="28px" height="auto" src="https://i.imgur.com/nX9OFvm.gif"></sub></sub>
 <font color="#a37a7a">　<b>love nikki</b>　<font style="font-size:9px">♡</font></font><br><br>
 　　　<sub><sub><img src="https://i.imgur.com/v3VaYjZ.gif"></sub></sub>　
-<a id="linkbjinho" style="text-decoration:none; color:#af8c8c;" data-target="spoiler9" class="btn-spoiler9">me and my home</a>
+<a id="linkbjinho" style="text-decoration:none; color:#af8c8c;" data-target="spoiler9" class="btn-spoiler9">my home</a>
 
 
 <center>
@@ -766,8 +700,6 @@ p { margin: 0; }
 <div id="spoiler9" class="spoiler-area is-closed9">
 <!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 <br>
-<img width="300px" height="auto" src="https://i.imgur.com/2hnKIp6.jpg"/>
-<br><br>
 <img width="300px" height="auto" src="https://i.imgur.com/0N5e0w1.png"/>
 <br><br>
 </div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
@@ -791,11 +723,11 @@ p { margin: 0; }
     loop($btns, function($btn){
         $btn.addEventListener("click", function(){
             var $spoiler = document.getElementById(this.getAttribute("data-target"));
-            if( this.innerHTML === "me and my home" ){
-                this.innerHTML = "me and my home ˣ";
+            if( this.innerHTML === "my home" ){
+                this.innerHTML = "my home ˣ";
                 $spoiler.classList.remove("is-closed9");
             } else {
-                this.innerHTML = "me and my home";
+                this.innerHTML = "my home";
                 $spoiler.classList.add("is-closed9");
             }
         });
@@ -810,8 +742,8 @@ p { margin: 0; }
 
 <br>
 　　　<sub><sub><img src="https://i.imgur.com/h01NXXS.gif"></sub></sub>　
-<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/p7gi3FZYu4iJ7eD47" target="_blank">
-<font color="#af8c8c">more images</font></a>
+<a id="linkbjinho" style="text-decoration:none;" href="https://file.pooftie.me/ln" target="_blank">
+<font color="#af8c8c">me</font></a>
 
 <br><br><br><br>
 
@@ -827,10 +759,10 @@ p { margin: 0; }
 <div id="spoiler5" class="spoiler-area is-closed5">
 <!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 <br>
-<img width="300px" height="auto" src="https://i.imgur.com/Fzw1Ri0.png"/><br><br>
 <img width="300px" height="auto" src="https://i.imgur.com/7QBjASG.png"/><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/wz7QoAa.png"/><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/aVH7nPG.png"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/H14xgsP.png"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/WyhVtnu.png"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/Fzw1Ri0.png"/><br><br>
 <br><br>
 </div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 <style>
@@ -872,7 +804,7 @@ p { margin: 0; }
 
 <br>
 　　　<sub><sub><img src="https://i.imgur.com/h01NXXS.gif"></sub></sub>　
-<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/FBd6hcys6rzC8uDW9" target="_blank">
+<a id="linkbjinho" style="text-decoration:none;" href="https://file.pooftie.me/pm" target="_blank">
 <font color="#af8c8c">more images</font></a>
 
 <br><br><br><br>
@@ -945,7 +877,7 @@ p { margin: 0; }
 <div id="spoiler6" class="spoiler-area is-closed6">
 <!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 <br>
-<img width="300px" height="auto" src="https://i.imgur.com/pBFzQJy.png"/>
+<img width="300px" height="auto" src="https://i.imgur.com/Q8TXHFi.png"/>
 <br><br>
 </div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 <style>
@@ -987,7 +919,7 @@ p { margin: 0; }
 
 <br>
 　　　<sub><sub><img src="https://i.imgur.com/h01NXXS.gif"></sub></sub>　
-<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/cMsEdzEqvxQLhkpf6" target="_blank">
+<a id="linkbjinho" style="text-decoration:none;" href="https://file.pooftie.me/kk" target="_blank">
 <font color="#af8c8c">more images</font></a>
 
 <br><br><br><br>
@@ -1048,7 +980,7 @@ p { margin: 0; }
 
 <br>
 　　　<sub><sub><img src="https://i.imgur.com/h01NXXS.gif"></sub></sub>　
-<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/hKZCCi6eWSWcKQcTA" target="_blank">
+<a id="linkbjinho" style="text-decoration:none;" href="https://file.pooftie.me/vk" target="_blank">
 <font color="#af8c8c">more images</font></a>
 
 <br><br><br><br>
@@ -1057,7 +989,7 @@ p { margin: 0; }
 <sub><sub><img width="28px" height="auto" src="https://i.imgur.com/nX9OFvm.gif"></sub></sub>
 <font color="#a37a7a">　<b>hidden world</b>　<font style="font-size:9px">♡</font></font><br><br>
 　　　<sub><sub><img src="https://i.imgur.com/h01NXXS.gif"></sub></sub>　
-<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/NUbsku4uWDn5Yw937" target="_blank">
+<a id="linkbjinho" style="text-decoration:none;" href="https://file.pooftie.me/hw" target="_blank">
 <font color="#af8c8c">my village</font></a>
 
 <br><br><br><br>
@@ -1117,7 +1049,7 @@ p { margin: 0; }
 
 <br>
 　　　<sub><sub><img src="https://i.imgur.com/h01NXXS.gif"></sub></sub>　
-<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/ZmaqPki1cPpeRmAB8" target="_blank">
+<a id="linkbjinho" style="text-decoration:none;" href="https://file.pooftie.me/pg" target="_blank">
 <font color="#af8c8c">more images</font></a>
 
 <br><br><br><br>
@@ -1179,7 +1111,7 @@ p { margin: 0; }
 <sub><sub><img width="28px" height="auto" src="https://i.imgur.com/nX9OFvm.gif"></sub></sub>
 <font color="#a37a7a">　<b>momo's dressup</b>　<font style="font-size:9px">♡</font></font><br><br>
 　　　<sub><sub><img src="https://i.imgur.com/h01NXXS.gif"></sub></sub>　
-<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/vpa6Zdqu7zERLyQh7" target="_blank">
+<a id="linkbjinho" style="text-decoration:none;" href="https://file.pooftie.me/mm" target="_blank">
 <font color="#af8c8c">me</font></a>
 
 <br><br><br><br>
@@ -1187,7 +1119,15 @@ p { margin: 0; }
 <sub><sub><img width="28px" height="auto" src="https://i.imgur.com/nX9OFvm.gif"></sub></sub>
 <font color="#a37a7a">　<b>my little star</b>　<font style="font-size:9px">♡</font></font><br><br>
 　　　<sub><sub><img src="https://i.imgur.com/h01NXXS.gif"></sub></sub>　
-<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/ZHW9oFpf7kLiYhLv5" target="_blank">
+<a id="linkbjinho" style="text-decoration:none;" href="https://file.pooftie.me/ls" target="_blank">
+<font color="#af8c8c">me</font></a>
+
+<br><br><br><br>
+
+<sub><sub><img width="28px" height="auto" src="https://i.imgur.com/nX9OFvm.gif"></sub></sub>
+<font color="#a37a7a">　<b>charat</b>　<font style="font-size:9px">♡</font></font><br><br>
+　　　<sub><sub><img src="https://i.imgur.com/h01NXXS.gif"></sub></sub>　
+<a id="linkbjinho" style="text-decoration:none;" href="https://file.pooftie.me/ct" target="_blank">
 <font color="#af8c8c">me</font></a>
 
 <br><br><br><br>
