--- a/help.html
+++ b/help.html
@@ -310,7 +310,7 @@ z-index: 3;
 
 
 <audio id="musict" preload="true">
-  <source src="https://files.catbox.moe/ld07dj.mp3" type="audio/mpeg">
+  <source src="https://file.pooftie.me/a/dreams.mp3" type="audio/mpeg">
 </audio>
 <div id="audioplayer">
  <button id="pButton" class="play"></button>
