--- a/i.html
+++ b/i.html
@@ -227,11 +227,11 @@ z-index: 3;
 <center>
 
 <video width="520" height="auto" controls>
-<source src="https://files.catbox.moe/ggwchs.mp4" type="video/mp4">
+<source src="https://file.pooftie.me/v/i.mp4" type="video/mp4">
 </video>
 
 <br><br><br>
-<font family = "Verdana"><font color="#80746D"><font size="1">music : <a href="https://files.catbox.moe/xcbdd6.mp3" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">breakfast .mp3</font></a></font></font></font>
+<font family = "Verdana"><font color="#80746D"><font size="1">music : <a href="https://file.pooftie.me/a/breakfast.mp3" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">breakfast .mp3</font></a></font></font></font>
 <br><br>
 </center>
 
