--- a/milkywoods.html
+++ b/milkywoods.html
@@ -307,7 +307,7 @@ z-index: 3;
 <div id="stuff">
 
 <audio id="musict" preload="true">
-  <source src="https://files.catbox.moe/0swkbl.mp3" type="audio/mpeg">
+  <source src="https://file.pooftie.me/a/ratinhabranca.mp3" type="audio/mpeg">
 </audio>
 <div id="audioplayer">
  <button id="pButton" class="play"></button>
@@ -441,7 +441,7 @@ function getPosition(el) {
 <font style="font-size: 8px;" color="#b38d94">
 <sub><img src="https://i.imgur.com/NTkeKx8.gif"/></sub> ‌ my flash games ( pc only ) :
 <br><br>
-<a href="https://files.catbox.moe/n5tkq1.rar" target="_blank"><img style="border: 20px solid transparent; border-image: url(https://i.imgur.com/sYxacdk.png) 30 round;" src="https://i.imgur.com/BltA2XT.gif"/></a>
+<a href="https://file.pooftie.me/r/flash%20games.rar" target="_blank"><img style="border: 20px solid transparent; border-image: url(https://i.imgur.com/sYxacdk.png) 30 round;" src="https://i.imgur.com/BltA2XT.gif"/></a>
 <br><br>
 ( click to download all the .swf files )
 </font>
