--- a/poofties.html
+++ b/poofties.html
@@ -311,7 +311,7 @@ z-index: 3;
 <div id="stuff">
 
 <audio id="musict" preload="true">
-  <source src="https://files.catbox.moe/s0lk7h.mp3" type="audio/mpeg">
+  <source src="https://file.pooftie.me/a/heartsng1.mp3" type="audio/mpeg">
 </audio>
 <div id="audioplayer">
  <button id="pButton" class="play"></button>
